ローカルの変更をコミット